    NativeCodeLoader.isNativeCodeLoaded (Masatake Iwasaki via Colin P. McCabe)

    HADOOP-12318. Expose underlying LDAP exceptions in SaslPlainServer. (Mike
    Yoder via atm)

    HADOOP-12295. Improve NetworkTopology#InnerNode#remove logic. (yliu)

    HADOOP-12050. Enable MaxInactiveInterval for hadoop http auth token
    (hzlu via benoyantony)

  OPTIMIZATIONS

    HADOOP-11785. Reduce the number of listStatus operation in distcp
    buildListing (Zoran Dimitrijevic via Colin P. McCabe)

    HADOOP-11812. Implement listLocatedStatus for ViewFileSystem to speed up
    split calculation (gera)

    HADOOP-11970. Replace uses of ThreadLocal<Random> with JDK7
    ThreadLocalRandom.  (Sean Busbey via Colin P. McCabe)

    HADOOP-11772. RPC Invoker relies on static ClientCache which has
    synchronized(this) blocks. (wheat9)

    HADOOP-11242. Record the time of calling in tracing span of
    IPC server. (Masatake Iwasaki via aajisaka)

    HADOOP-11885. hadoop-dist dist-layout-stitching.sh does not work with dash.
    (wang)

    HADOOP-12104. Migrate Hadoop Pipes native build to new CMake framework
    (alanburlison via cmccabe)

    HADOOP-12036. Consolidate all of the cmake extensions in one directory
    (alanburlison via cmccabe)

    HADOOP-12112. Make hadoop-common-project Native code -Wall-clean
    (alanburlison via cmccabe)

    HADOOP-12172. FsShell mkdir -p makes an unnecessary check for the existence
    of the parent. (cnauroth)

    HADOOP-12194. Support for incremental generation in the protoc plugin.
    (wang)

    HADOOP-11878. FileContext#fixRelativePart should check for not null for a
    more informative exception. (Brahma Reddy Battula via kasha)

  BUG FIXES

    HADOOP-11802: DomainSocketWatcher thread terminates sometimes after there
    is an I/O error during requestShortCircuitShm (cmccabe)

    HADOOP-10027. *Compressor_deflateBytesDirect passes instance instead of
    jclass to GetStaticObjectField. (Hui Zheng via cnauroth)
