@@ -753,6 +753,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12050. Enable MaxInactiveInterval for hadoop http auth token
     (hzlu via benoyantony)
 
+    HADOOP-12325. RPC Metrics : Add the ability track and log slow RPCs.
+    (Anu Engineer via xyao)
+
   OPTIMIZATIONS
 
     HADOOP-11785. Reduce the number of listStatus operation in distcp
